@@ -309,7 +309,17 @@ class ApiQueryDeletedrevs extends ApiQueryBase {
 			'end' => 'The timestamp to stop enumerating at (1,2)',
 			'dir' => 'The direction in which to enumerate (1,2)',
 			'limit' => 'The maximum amount of revisions to list',
-			'prop' => 'Which properties to get',
+			'prop' => array(
+				'Which properties to get',
+				' revid          - Adds the revision id of the deleted revision',
+				' user           - Adds user who made the revision',
+				' comment        - Adds the comment of the revision',
+				' parsedcomment  - Adds the parsed comment of the revision',
+				' minor          - Tags if the revision is minor',
+				' len            - Adds the length of the revision',
+				' content        - Adds the content of the revision',
+				' token          - Gives the edit token',
+			),
 			'namespace' => 'Only list pages in this namespace (3)',
 			'user' => 'Only list revisions by this user',
 			'excludeuser' => 'Don\'t list revisions by this user',
