@@ -224,7 +224,18 @@ class ApiQueryFilearchive extends ApiQueryBase {
 			'limit' => 'How many total images to return',
 			'sha1' => "SHA1 hash of image. Overrides {$this->getModulePrefix()}sha1base36",
 			'sha1base36' => 'SHA1 hash of image in base 36 (used in MediaWiki)',
-			'prop' => 'Which properties to get',
+			'prop' => array(
+				'What image information to get:',
+				' sha1         - Adds sha1 hash for the image',
+				' timestamp    - Adds timestamp for the uploaded version',
+				' user         - Adds user for uploaded the image version',
+				' size         - Adds the size of the image in bytes',
+				' dimensions   - Adds the height and width of the image',
+				' description  - Adds description the image version',
+				' mime         - Adds MIME of the image',
+				' metadata     - Lists EXIF metadata for the version of the image',
+				' bitdepth     - Adds the bit depth of the version',
+            ),
 		);
 	}
 
