@@ -418,7 +418,18 @@ class ApiQueryContributions extends ApiQueryBase {
 			'userprefix' => "Retrieve contibutions for all users whose names begin with this value. Overrides {$p}user",
 			'dir' => 'The direction to search (older or newer)',
 			'namespace' => 'Only list contributions in these namespaces',
-			'prop' => 'Include additional pieces of information',
+			'prop' => array(
+				'Include additional pieces of information',
+				' ids            - Adds the page id and revision id',
+				' title          - Adds the title and namespace id of the page',
+				' timestamp      - Adds the timestamp of the edit',
+				' comment        - Adds the comment of the edit',
+				' parsedcomment  - Adds the parsed comment of the edit',
+				' size           - Adds the size of the page',
+				' flags          - Adds flags of the edit',
+				' patrolled      - Tags patrolled edits',
+				' tags           - Lists tags for the edit',
+			),
 			'show' => array( "Show only items that meet this criteria, e.g. non minor edits only: {$p}show=!minor",
 					"NOTE: if {$p}show=patrolled or {$p}show=!patrolled is set, revisions older than $wgRCMaxAge won\'t be shown", ),
 			'tag' => 'Only list revisions tagged with this tag',
